Added a hide tournament button for every tourney

--- a/templates/base.html
+++ b/templates/base.html
@@ -666,5 +666,8 @@
 <!-- Extra JavaScript block for child templates -->
 {% block extra_js %}{% endblock %}
 
+<!-- Hide tournament functionality -->
+<script src="{{ url_for('static', filename='js/hide-tournament.js') }}"></script>
+
 </body>
 </html>
