--- a/templates/tournament/index.html
+++ b/templates/tournament/index.html
@@ -251,13 +251,11 @@
                         </a>
                         {% endif %}
                     </div>
-                    {% if tournament.via_share_link %}
-                    <button class="btn btn-sm btn-outline-secondary hide-tournament" 
+                    <button class="btn btn-sm btn-outline-secondary ms-2 hide-tournament" 
                             data-tournament-id="{{ tournament.id }}"
                             title="Hide this tournament">
                         <i class="fas fa-eye-slash"></i>
                     </button>
-                    {% endif %}
                 </div>
             </div>
         </div>
